--- a/config/zones/US-NW-PSCO.yaml
+++ b/config/zones/US-NW-PSCO.yaml
@@ -11,6 +11,12 @@ capacity:
     - datetime: '2017-08-01'
       source: EIA.gov
       value: 1.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 2.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1.0
     - datetime: '2021-03-01'
       source: EIA.gov
       value: 2.0
@@ -43,14 +49,14 @@ capacity:
     - datetime: '2017-09-01'
       source: EIA.gov
       value: 1314.3
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 1311.3
   gas:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6507.0
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 6510.0
     - datetime: '2022-05-01'
@@ -76,6 +82,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 56.0
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 55.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 53.7
@@ -100,7 +109,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 30.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-09-01'
       source: EIA.gov
       value: 28.0
     - datetime: '2023-01-01'
@@ -125,6 +134,63 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 412.8
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 414.0
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 418.5
+    - datetime: '2018-08-01'
+      source: EIA.gov
+      value: 420.0
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 421.5
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 477.5
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 486.2
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 487.8
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 489.3
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 492.3
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 493.8
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 501.9
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 503.4
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 504.9
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 507.6
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 512.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 514.7
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 516.3
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 517.9
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 518.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 520.3
@@ -199,7 +265,25 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2870.1
-    - datetime: '2021-01-01'
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 2867.1
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 3467.1
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 3526.5
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 3520.7
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 4019.1
+    - datetime: '2020-09-01'
+      source: EIA.gov
+      value: 4319.1
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 4490.8
     - datetime: '2023-01-01'
