--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -8,7 +8,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1.0
-    - datetime: '2021-01-01'
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 2.2
     - datetime: '2021-12-01'
@@ -39,6 +39,27 @@ capacity:
     - datetime: '2017-07-01'
       source: EIA.gov
       value: 1868.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1848.7
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1925.4
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 1908.2
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 1932.9
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 1871.9
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 1987.9
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1975.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1917.5
@@ -70,6 +91,15 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 17522.6
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 18462.1
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 17295.4
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 16164.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 15029.7
@@ -83,6 +113,27 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 35594.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 34715.8
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 34607.0
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 34614.2
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 34767.5
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 34817.5
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 34829.7
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 34830.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 35949.5
@@ -130,6 +181,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 3225.3
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 3311.4
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 3310.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 3309.4
@@ -140,14 +197,14 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1056.6
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 1306.6
   nuclear:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 5818.2
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 6054.4
     - datetime: '2023-07-01'
@@ -160,7 +217,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1132.5
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1188.3
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 1188.9
     - datetime: '2022-01-01'
@@ -209,6 +269,69 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 1286.6
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1292.6
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 1323.6
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 1326.9
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1339.5
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 1340.5
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 1342.8
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 1346.5
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 1350.8
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 1354.4
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 1458.3
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 1878.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1892.4
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 2063.8
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 2069.5
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 2161.7
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 2170.4
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 2222.9
+    - datetime: '2020-09-01'
+      source: EIA.gov
+      value: 2500.9
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 2504.4
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 2524.4
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 2635.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2639.2
@@ -306,9 +429,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 45.0
-    - datetime: '2022-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 0.0
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 45.0
   wind:
     - datetime: '2017-01-01'
       source: EIA.gov
