--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -8,7 +8,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2.6
-    - datetime: '2021-01-01'
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 3.6
+    - datetime: '2019-11-01'
       source: EIA.gov
       value: 1.8
     - datetime: '2022-11-01'
@@ -59,6 +62,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1742.0
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1736.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1734.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1584.9
@@ -72,7 +81,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 4.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-12-01'
       source: EIA.gov
       value: 19.2
   hydro:
@@ -104,6 +113,54 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 163.1
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 164.1
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 174.1
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 177.1
+    - datetime: '2018-04-01'
+      source: EIA.gov
+      value: 187.1
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 195.1
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 197.1
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 198.1
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 208.1
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 218.1
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 229.3
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 239.3
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 307.8
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 309.4
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 311.8
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 314.9
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 369.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 369.5
@@ -153,7 +210,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 1.1
   wind:
@@ -163,7 +220,10 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 794.4
-    - datetime: '2021-01-01'
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 845.3
+    - datetime: '2019-08-01'
       source: EIA.gov
       value: 1065.8
     - datetime: '2021-02-01'
