--- a/config/zones/US-TEX-ERCO.yaml
+++ b/config/zones/US-TEX-ERCO.yaml
@@ -14,7 +14,37 @@ capacity:
     - datetime: '2017-11-01'
       source: EIA.gov
       value: 73.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 92.8
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 94.3
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 114.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 124.1
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 134.0
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 143.9
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 153.8
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 163.7
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 183.5
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 203.3
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 223.1
     - datetime: '2021-04-01'
@@ -141,6 +171,21 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 218.7
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 208.5
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 206.8
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 198.3
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 193.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 181.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 179.9
@@ -157,6 +202,15 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 20089.6
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 15925.5
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 14738.7
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 14285.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 14329.7
@@ -176,6 +230,54 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 62602.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 62727.3
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 63391.3
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 63512.8
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 64352.1
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 64452.1
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 64539.1
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 64476.0
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 64149.9
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 64299.9
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 64302.3
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 64303.5
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 64304.7
+    - datetime: '2020-09-01'
+      source: EIA.gov
+      value: 64305.9
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 63987.3
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 63887.8
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 63890.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 63939.4
@@ -283,6 +385,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 566.1
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 560.1
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 562.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 512.0
@@ -304,6 +412,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 88.1
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 89.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 248.8
@@ -338,7 +449,49 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 1221.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 1223.6
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 1605.6
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 1710.6
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 1927.6
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1939.5
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 1951.2
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 1961.2
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 2223.7
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 2428.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 2630.7
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 2647.5
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 3347.5
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 3677.5
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 4197.5
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 4864.0
     - datetime: '2021-02-01'
@@ -465,7 +618,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 239.9
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 229.7
   wind:
@@ -496,6 +649,72 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 20927.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 20836.5
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 21033.2
+    - datetime: '2018-04-01'
+      source: EIA.gov
+      value: 21333.2
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 21483.2
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 21643.2
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 22292.6
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 22392.7
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 22692.7
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 22892.2
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 22922.4
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 23688.5
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 23851.4
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 24771.0
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 25078.1
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 25690.0
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 25643.4
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 25693.8
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 26273.4
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 26453.4
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 26604.6
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 26749.5
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 27743.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 27862.4
