--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -30,6 +30,21 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 540.8
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 538.2
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 528.2
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 557.3
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 559.1
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 610.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 608.5
@@ -58,7 +73,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 3815.5
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 3787.5
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 3321.4
   gas:
@@ -68,6 +86,27 @@ capacity:
     - datetime: '2017-08-01'
       source: EIA.gov
       value: 6108.9
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 6042.1
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 6048.7
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 6043.2
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 6337.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 6212.4
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 6012.0
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 6114.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 6430.8
@@ -82,7 +121,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 226.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 224.4
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 225.2
     - datetime: '2023-04-01'
@@ -112,6 +154,12 @@ capacity:
     - datetime: '2017-08-01'
       source: EIA.gov
       value: 571.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 887.2
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 558.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 242.2
@@ -137,6 +185,81 @@ capacity:
     - datetime: '2017-11-01'
       source: EIA.gov
       value: 996.5
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1133.4
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 1138.4
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 1148.4
+    - datetime: '2018-08-01'
+      source: EIA.gov
+      value: 1157.9
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 1170.4
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 1172.3
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 1232.9
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 1286.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1290.6
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 1308.1
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 1314.1
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 1319.0
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 1331.0
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 1337.5
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 1344.5
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 1353.2
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 1378.2
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 1412.1
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1436.1
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 1441.1
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 1446.0
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 1459.9
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 1472.7
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 1483.7
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 1521.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1595.4
