--- a/config/zones/US-FLA-FMPP.yaml
+++ b/config/zones/US-FLA-FMPP.yaml
@@ -12,7 +12,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 45.5
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 0.0
   coal:
@@ -26,6 +26,15 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2535.8
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 2506.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 2483.9
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 2487.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2502.9
@@ -71,7 +80,7 @@ capacity:
     - datetime: '2017-09-01'
       source: EIA.gov
       value: 17.9
-    - datetime: '2021-01-01'
+    - datetime: '2020-06-01'
       source: EIA.gov
       value: 166.9
   unknown:
