--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -30,7 +30,13 @@ capacity:
     - datetime: '2017-03-01'
       source: EIA.gov
       value: 397.4
-    - datetime: '2021-01-01'
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 272.4
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 258.4
+    - datetime: '2020-07-01'
       source: EIA.gov
       value: 255.2
     - datetime: '2021-11-01'
@@ -46,14 +52,32 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2442.7
-    - datetime: '2021-01-01'
+    - datetime: '2018-12-01'
       source: EIA.gov
       value: 1478.4
   gas:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 8766.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 8737.9
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 9723.2
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 10708.5
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 10674.8
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 10555.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 10587.6
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 10553.9
     - datetime: '2022-01-01'
@@ -73,7 +97,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 12.2
-    - datetime: '2021-01-01'
+    - datetime: '2019-02-01'
       source: EIA.gov
       value: 0.0
   hydro storage:
@@ -88,7 +112,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1358.7
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1363.4
+    - datetime: '2020-10-01'
       source: EIA.gov
       value: 1329.7
   solar:
@@ -101,6 +128,24 @@ capacity:
     - datetime: '2017-11-01'
       source: EIA.gov
       value: 41.5
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 48.8
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 175.7
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 177.2
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 297.1
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 372.0
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 446.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 436.5
@@ -147,7 +192,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 21.0
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 18.8
   wind:
