--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -8,7 +8,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 14.0
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 24.0
     - datetime: '2021-11-01'
@@ -21,7 +24,16 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 531.5
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 622.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 620.8
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 622.4
+    - datetime: '2019-12-01'
       source: EIA.gov
       value: 620.8
     - datetime: '2022-01-01'
@@ -43,14 +55,20 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 395.4
-    - datetime: '2021-01-01'
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 0.0
   gas:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 21336.3
-    - datetime: '2021-01-01'
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 20293.9
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 22017.0
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 23743.6
     - datetime: '2022-01-01'
@@ -88,6 +106,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 3846.1
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 1977.1
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 250.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 274.5
@@ -104,7 +128,22 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 262.7
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 560.7
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 858.7
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1157.8
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1604.8
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 1902.8
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 2275.3
     - datetime: '2021-03-01'
