--- a/config/zones/US-FLA-TAL.yaml
+++ b/config/zones/US-FLA-TAL.yaml
@@ -26,7 +26,16 @@ capacity:
     - datetime: '2017-10-01'
       source: EIA.gov
       value: 939.2
-    - datetime: '2021-01-01'
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 942.8
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 867.8
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 943.0
+    - datetime: '2020-04-01'
       source: EIA.gov
       value: 961.8
   geothermal:
@@ -56,7 +65,7 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 20.0
-    - datetime: '2021-01-01'
+    - datetime: '2019-12-01'
       source: EIA.gov
       value: 62.0
   unknown:
