--- a/config/zones/US-MIDW-AECI.yaml
+++ b/config/zones/US-MIDW-AECI.yaml
@@ -28,7 +28,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 27.0
-    - datetime: '2021-01-01'
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 30.0
   hydro storage:
@@ -53,7 +53,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-06-01'
       source: EIA.gov
       value: 2.5
     - datetime: '2022-12-01'
@@ -70,7 +70,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 462.9
-    - datetime: '2021-01-01'
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 704.9
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 941.4
     - datetime: '2025-01-01'
