--- a/config/zones/US-MIDW-LGEE.yaml
+++ b/config/zones/US-MIDW-LGEE.yaml
@@ -12,14 +12,17 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1.0
-    - datetime: '2021-01-01'
+    - datetime: '2019-07-01'
       source: EIA.gov
       value: 2.0
   coal:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6545.6
-    - datetime: '2021-01-01'
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 6252.5
+    - datetime: '2020-06-01'
       source: EIA.gov
       value: 5807.2
     - datetime: '2024-03-01'
@@ -29,7 +32,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 4027.9
-    - datetime: '2021-01-01'
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 4011.6
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 3993.6
     - datetime: '2021-04-01'
@@ -46,7 +52,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 133.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 137.8
   hydro storage:
@@ -68,6 +74,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 10.0
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 13.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 14.7
