--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -17,6 +17,60 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 23.3
+    - datetime: '2018-04-01'
+      source: EIA.gov
+      value: 24.3
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 27.3
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 36.4
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 41.4
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 42.9
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 48.9
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 56.8
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 60.1
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 61.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 73.1
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 75.4
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 79.7
+    - datetime: '2020-05-01'
+      source: EIA.gov
+      value: 83.6
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 86.2
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 89.0
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 91.9
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 94.1
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 126.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 128.6
@@ -132,6 +186,18 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 1538.8
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1542.2
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1540.4
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1566.1
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 1565.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1386.8
@@ -176,6 +242,51 @@ capacity:
     - datetime: '2017-07-01'
       source: EIA.gov
       value: 16510.1
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 16288.2
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 16283.4
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 18023.1
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 18025.1
+    - datetime: '2018-08-01'
+      source: EIA.gov
+      value: 18026.5
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 17954.5
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 18542.2
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 18545.9
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 18645.9
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 18648.4
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 18748.4
+    - datetime: '2019-06-01'
+      source: EIA.gov
+      value: 19654.7
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 19656.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 19890.0
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 19871.2
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 20033.5
@@ -241,6 +352,27 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1902.5
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1913.7
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1905.8
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 1904.6
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 1903.1
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 1902.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1908.2
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 1903.3
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1894.0
@@ -263,7 +395,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1564.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 1799.0
     - datetime: '2022-01-01'
@@ -279,7 +411,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 4074.9
-    - datetime: '2021-01-01'
+    - datetime: '2019-05-01'
       source: EIA.gov
       value: 3404.9
     - datetime: '2023-01-01'
@@ -295,6 +427,18 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 6003.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 6606.1
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 6070.0
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 6086.4
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 5766.9
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 5724.6
@@ -362,6 +506,105 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 795.7
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 818.3
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 821.1
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 857.7
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 859.6
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 865.8
+    - datetime: '2018-07-01'
+      source: EIA.gov
+      value: 869.5
+    - datetime: '2018-08-01'
+      source: EIA.gov
+      value: 877.4
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 881.4
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 904.2
+    - datetime: '2018-11-01'
+      source: EIA.gov
+      value: 909.2
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 976.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1044.6
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 1056.5
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 1058.5
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 1060.5
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 1064.5
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 1068.5
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 1071.8
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 1096.3
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 1115.2
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 1118.7
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 1212.9
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1319.3
+    - datetime: '2020-02-01'
+      source: EIA.gov
+      value: 1327.0
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 1333.0
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 1334.0
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 1353.2
+    - datetime: '2020-07-01'
+      source: EIA.gov
+      value: 1355.6
+    - datetime: '2020-08-01'
+      source: EIA.gov
+      value: 1365.1
+    - datetime: '2020-09-01'
+      source: EIA.gov
+      value: 1371.1
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 1374.4
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 1456.1
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 1525.5
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1608.7
@@ -516,7 +759,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 300.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 0.0
   wind:
@@ -535,6 +778,24 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 1366.4
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1365.9
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 1367.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1389.4
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 1394.0
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 1427.8
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 1500.4
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1498.4
