--- a/config/zones/US-NW-AVA.yaml
+++ b/config/zones/US-NW-AVA.yaml
@@ -8,7 +8,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1.2
-    - datetime: '2019-01-01'
+    - datetime: '2018-09-01'
       source: EIA.gov
       value: 0.0
   biomass:
@@ -34,6 +34,9 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1176.0
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1235.4
     - datetime: '2019-01-01'
       source: EIA.gov
       value: 1251.8
@@ -59,7 +62,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2019-01-01'
+    - datetime: '2018-11-01'
       source: EIA.gov
       value: 19.2
   unknown:
@@ -70,7 +73,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 105.3
-    - datetime: '2021-01-01'
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 249.3
     - datetime: '2024-09-01'
