--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -33,6 +33,12 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 15.2
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 35.2
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 15.2
   coal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -54,7 +60,28 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 670.4
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 678.4
+    - datetime: '2018-03-01'
+      source: EIA.gov
+      value: 667.0
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 734.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 735.7
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 761.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 740.7
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 718.9
+    - datetime: '2020-06-01'
       source: EIA.gov
       value: 750.5
     - datetime: '2021-04-01'
@@ -128,6 +155,39 @@ capacity:
     - datetime: '2017-10-01'
       source: EIA.gov
       value: 1077.3
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1092.3
+    - datetime: '2018-05-01'
+      source: EIA.gov
+      value: 1095.4
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 1115.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 1115.6
+    - datetime: '2019-03-01'
+      source: EIA.gov
+      value: 1215.6
+    - datetime: '2019-07-01'
+      source: EIA.gov
+      value: 1222.9
+    - datetime: '2019-10-01'
+      source: EIA.gov
+      value: 1422.9
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 1432.9
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1433.7
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 1483.7
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 1593.7
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 1592.5
