--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -16,7 +16,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 2437.8
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 2530.7
+    - datetime: '2020-01-01'
       source: EIA.gov
       value: 1814.7
     - datetime: '2023-01-01'
@@ -40,6 +43,18 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 642.6
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 657.0
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 662.2
+    - datetime: '2019-05-01'
+      source: EIA.gov
+      value: 665.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 678.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 669.0
@@ -106,7 +121,19 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 258.3
-    - datetime: '2021-01-01'
+    - datetime: '2018-02-01'
+      source: EIA.gov
+      value: 283.3
+    - datetime: '2018-10-01'
+      source: EIA.gov
+      value: 363.3
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 371.1
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 372.9
+    - datetime: '2020-04-01'
       source: EIA.gov
       value: 452.9
     - datetime: '2023-12-01'
@@ -125,8 +152,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  This zone includes all electricity production from the generation-only balancing authorities NaturEner Power Watch, LLC and NaturEner
+disclaimer: This zone includes all electricity production from the generation-only balancing authorities NaturEner Power Watch, LLC and NaturEner
   Wind Watch, LLC. Read more on the wiki page.
 emissionFactors:
   direct:
