--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -8,7 +8,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 4.0
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 8.2
     - datetime: '2022-12-01'
@@ -49,6 +52,18 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6432.4
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 6432.7
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 6318.9
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 6186.6
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 5929.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 6007.6
@@ -65,6 +80,18 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 1798.5
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 1813.3
+    - datetime: '2019-02-01'
+      source: EIA.gov
+      value: 1811.3
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1946.6
+    - datetime: '2020-10-01'
+      source: EIA.gov
+      value: 1928.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2003.0
@@ -97,6 +124,9 @@ capacity:
     - datetime: '2017-03-01'
       source: EIA.gov
       value: 682.1
+    - datetime: '2018-01-01'
+      source: EIA.gov
+      value: 704.1
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 698.6
@@ -125,7 +155,25 @@ capacity:
     - datetime: '2017-10-01'
       source: EIA.gov
       value: 77.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-08-01'
+      source: EIA.gov
+      value: 78.5
+    - datetime: '2018-09-01'
+      source: EIA.gov
+      value: 80.0
+    - datetime: '2018-12-01'
+      source: EIA.gov
+      value: 84.0
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 122.5
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 124.6
+    - datetime: '2020-04-01'
+      source: EIA.gov
+      value: 184.6
+    - datetime: '2020-12-01'
       source: EIA.gov
       value: 192.2
     - datetime: '2021-10-01'
@@ -177,7 +225,7 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 10.6
-    - datetime: '2021-01-01'
+    - datetime: '2018-10-01'
       source: EIA.gov
       value: 11.5
     - datetime: '2022-01-01'
@@ -199,6 +247,18 @@ capacity:
     - datetime: '2017-12-01'
       source: EIA.gov
       value: 376.4
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 406.4
+    - datetime: '2019-12-01'
+      source: EIA.gov
+      value: 503.1
+    - datetime: '2020-06-01'
+      source: EIA.gov
+      value: 729.1
+    - datetime: '2020-11-01'
+      source: EIA.gov
+      value: 781.6
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 782.3
