--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -8,7 +8,10 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 0.0
-    - datetime: '2021-01-01'
+    - datetime: '2018-04-01'
+      source: EIA.gov
+      value: 10.0
+    - datetime: '2019-01-01'
       source: EIA.gov
       value: 20.0
     - datetime: '2021-09-01'
@@ -40,14 +43,17 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 3231.1
-    - datetime: '2021-01-01'
+    - datetime: '2019-09-01'
+      source: EIA.gov
+      value: 2428.0
+    - datetime: '2019-11-01'
       source: EIA.gov
       value: 821.8
   gas:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 6300.6
-    - datetime: '2021-01-01'
+    - datetime: '2018-01-01'
       source: EIA.gov
       value: 8157.6
     - datetime: '2022-01-01'
@@ -107,6 +113,21 @@ capacity:
     - datetime: '2017-05-01'
       source: EIA.gov
       value: 305.4
+    - datetime: '2018-04-01'
+      source: EIA.gov
+      value: 325.4
+    - datetime: '2019-01-01'
+      source: EIA.gov
+      value: 155.4
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 155.2
+    - datetime: '2020-03-01'
+      source: EIA.gov
+      value: 159.8
+    - datetime: '2020-12-01'
+      source: EIA.gov
+      value: 259.8
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 359.8
@@ -149,8 +170,7 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
+disclaimer: This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
   Harquahala Generating Company, LLC - HGBA. Read more on the wiki page.
 emissionFactors:
   direct:
