--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -29,7 +29,13 @@ capacity:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 941.3
-    - datetime: '2021-01-01'
+    - datetime: '2019-11-01'
+      source: EIA.gov
+      value: 817.7
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 1436.7
+    - datetime: '2020-03-01'
       source: EIA.gov
       value: 1530.7
     - datetime: '2023-01-01'
@@ -68,6 +74,18 @@ capacity:
     - datetime: '2017-08-01'
       source: EIA.gov
       value: 266.1
+    - datetime: '2018-06-01'
+      source: EIA.gov
+      value: 321.1
+    - datetime: '2019-04-01'
+      source: EIA.gov
+      value: 322.4
+    - datetime: '2019-08-01'
+      source: EIA.gov
+      value: 323.5
+    - datetime: '2020-01-01'
+      source: EIA.gov
+      value: 325.0
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 328.9
