--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -107,7 +107,8 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes a third of the nuclear related electricity production from the balancing authority South Carolina Electric & Gas
+disclaimer:
+  This zone includes a third of the nuclear related electricity production from the balancing authority South Carolina Electric & Gas
   Company. Read more on the zone definition wiki page.
 emissionFactors:
   direct:
