--- a/config/zones/US-NW-BPAT.yaml
+++ b/config/zones/US-NW-BPAT.yaml
@@ -185,7 +185,8 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes all wind related electricity production from the generation-only balancing authority Avangrid Renewables, LLC.
+disclaimer:
+  This zone includes all wind related electricity production from the generation-only balancing authority Avangrid Renewables, LLC.
   Read more on the zone definition wiki page.
 emissionFactors:
   direct:
