--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -170,7 +170,8 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
+disclaimer:
+  This zone includes all electricity production from the generation-only balancing authorities Arlington Valley, LLC - AVBA and New
   Harquahala Generating Company, LLC - HGBA. Read more on the wiki page.
 emissionFactors:
   direct:
